Refine markdown headers and update print statement for clarity in Image_Colorization_ResNet_UNet_GAN.ipynb

--- a/Image_Colorization_ResNet_UNet_GAN.ipynb
+++ b/Image_Colorization_ResNet_UNet_GAN.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# **Deep Image Colorization: A ResNet-Based U-Net and PatchGAN Approach with Perceptual Loss**\n",
     "\n",
-    "### **Author: Constantino Harry Alexander (25206605)**"
+    "#### **Author: Constantino Harry Alexander (25206605)**"
    ]
   },
   {
@@ -17,7 +17,7 @@
     "id": "fIyNkp1XnR1Q"
    },
    "source": [
-    "# **Project Overview**\n",
+    "## **Project Overview**\n",
     "\n",
     "This project implements a conditional Generative Adversarial Network (cGAN) for automatic image colorization. The architecture is inspired by the Image-to-Image Translation framework (Pix2Pix) by Isola et al. [1].\n",
     "\n",
@@ -1571,7 +1571,7 @@
     "    lab[..., 2] = np.clip(ab_lab[1], -128, 127)\n",
     "    return color.lab2rgb(lab)\n",
     "\n",
-    "print(\"Please upload a grayscale/B&W image to colorize...\")\n",
+    "print(\"Upload a grayscale/B&W image to colorize...\")\n",
     "uploaded = files.upload()\n",
     "if uploaded:\n",
     "    name = list(uploaded.keys())[0]\n",
